--- a/app/src/main/res/layout/item_fragment_one.xml
+++ b/app/src/main/res/layout/item_fragment_one.xml
@@ -55,78 +55,79 @@
         </LinearLayout>
     </FrameLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/icon_background">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="18dp"
-            android:layout_marginRight="18dp"
-            android:layout_marginTop="4dp"
-            android:orientation="vertical">
-
-            <cn.cnlinfo.ccf.view.UpDownTextView
-                android:id="@+id/tv_up_down"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:background="@drawable/shape_up_down_textview" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/icon_main_page_background">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="18dp"
+                android:layout_marginTop="9dp"
                 android:orientation="vertical">
 
-                <TextView
-                    style="@style/text_0e1214_15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="账号信息" />
+                <cn.cnlinfo.ccf.view.UpDownTextView
+                    android:id="@+id/tv_up_down"
+                    android:layout_width="match_parent"
+                    android:layout_height="24dp"
+                    android:background="@drawable/shape_up_down_textview" />
 
-                <GridView
-                    android:id="@+id/gv_account_info"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:numColumns="4"
-                    android:stretchMode="columnWidth"
-                    android:verticalSpacing="0dp"
-                    android:gravity="center"
-                    android:background="@drawable/shape_gv_line"
-                    android:layout_marginTop="5dp"
-                    >
+                    android:orientation="vertical">
 
-                </GridView>
-            </LinearLayout>
+                    <TextView
+                        style="@style/text_0e1214_15"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:text="账号信息" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="9dp">
+                    <GridView
+                        android:id="@+id/gv_account_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="128dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/shape_gv_line"
+                        android:gravity="center"
+                        android:numColumns="4"
+                        android:stretchMode="columnWidth"
+                        android:verticalSpacing="0dp" />
 
-                <TextView
-                    style="@style/text_0e1214_15"
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="平台信息" />
+                    android:layout_marginTop="9dp"
+                    android:orientation="vertical">
 
-                <GridView
-                    android:id="@+id/gv_platform_info"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:numColumns="4"
-                    android:stretchMode="columnWidth"
-                    android:verticalSpacing="0dp"
-                    android:gravity="center"
-                    android:background="@drawable/shape_gv_line"
-                    android:layout_marginTop="5dp">
+                    <TextView
+                        style="@style/text_0e1214_15"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:text="平台信息" />
 
-                </GridView>
+                    <GridView
+                        android:id="@+id/gv_platform_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="128dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/shape_gv_line"
+                        android:gravity="center"
+                        android:numColumns="4"
+                        android:stretchMode="columnWidth"
+                        android:verticalSpacing="0dp" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
