--- a/app/src/main/res/layout/activity_internal_transfer.xml
+++ b/app/src/main/res/layout/activity_internal_transfer.xml
@@ -16,7 +16,9 @@
         android:paddingBottom="17dp"
         android:paddingLeft="38dp"
         android:paddingRight="48dp"
-        android:paddingTop="17dp">
+        android:paddingTop="17dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <TextView
             style="@style/text_0e1214_17"
@@ -68,7 +70,6 @@
                 android:layout_weight="3"
                 android:gravity="center"
                 android:inputType="numberDecimal"
-                android:digits="@string/input_impose_num_lower_case"
                 android:maxLines="1"
                 android:maxLength="11"
                 android:textColor="@drawable/selector_edit_text_color"
