--- a/app/src/main/res/layout/activity_online_wallet.xml
+++ b/app/src/main/res/layout/activity_online_wallet.xml
@@ -160,6 +160,7 @@
                    android:text="时间"
                    android:gravity="center"
                    android:layout_weight="1"
+                   android:background="@drawable/shape_text_margin_line"
                    style="@style/text_0e1214_15"/>
                <TextView
                    android:layout_width="0dp"
@@ -167,6 +168,7 @@
                    android:text="转出账户"
                    style="@style/text_0e1214_15"
                    android:gravity="center"
+                   android:background="@drawable/shape_text_margin_line"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
@@ -174,6 +176,7 @@
                    android:text="数量类型"
                    style="@style/text_0e1214_15"
                    android:gravity="center"
+                   android:background="@drawable/shape_text_margin_line"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
@@ -181,6 +184,7 @@
                    android:text="类型"
                    style="@style/text_0e1214_15"
                    android:gravity="center"
+                   android:background="@drawable/shape_text_margin_line"
                    android:layout_weight="1"/>
 
            </LinearLayout>
