--- a/app/src/main/res/layout/activity_user_upgrade.xml
+++ b/app/src/main/res/layout/activity_user_upgrade.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/icon_background"
     tools:context="cn.cnlinfo.ccf.activity.UserUpgradeActivity">
 
     <include layout="@layout/item_title_no_right"/>
