--- a/app/src/main/res/layout/fragment_cycle_package.xml
+++ b/app/src/main/res/layout/fragment_cycle_package.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/icon_background"
     android:orientation="vertical">
 
     <LinearLayout
@@ -89,7 +88,7 @@
                 android:layout_marginTop="9dp"
                 android:orientation="vertical">
 
-        <!--        <LinearLayout
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
@@ -105,7 +104,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="9dp" />
-                </LinearLayout>-->
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
