--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -16,6 +16,7 @@
         android:id="@+id/vp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></cn.cnlinfo.ccf.view.StopScrollViewPager>
+        android:layout_weight="1"
+        android:background="@drawable/icon_background"></cn.cnlinfo.ccf.view.StopScrollViewPager>
 
 </LinearLayout>
