--- a/app/src/main/res/layout/item_fragment_one.xml
+++ b/app/src/main/res/layout/item_fragment_one.xml
@@ -57,30 +57,35 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@drawable/icon_main_page_background">
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="18dp"
                 android:layout_marginRight="18dp"
                 android:layout_marginTop="9dp"
+                android:layout_marginBottom="9dp"
                 android:orientation="vertical">
 
                 <cn.cnlinfo.ccf.view.UpDownTextView
                     android:id="@+id/tv_up_down"
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
+
                     android:background="@drawable/shape_up_down_textview" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
                     <TextView
@@ -105,7 +110,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="9dp"
                     android:orientation="vertical">
 
@@ -126,6 +131,7 @@
                         android:numColumns="4"
                         android:stretchMode="columnWidth"
                         android:verticalSpacing="0dp" />
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
