--- a/app/src/main/res/layout/fragment_gauge_panel.xml
+++ b/app/src/main/res/layout/fragment_gauge_panel.xml
@@ -5,16 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <include layout="@layout/item_image"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
         <GridView
             android:id="@+id/gv_gauge_panel"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="396dp"
             android:numColumns="4"
             android:stretchMode="columnWidth"
             android:verticalSpacing="0dp"
-            android:background="@drawable/ic_background"
             android:layout_marginBottom="9dp">
              </GridView>
+        </LinearLayout>
+    </ScrollView>
     </LinearLayout>
