--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -34,7 +34,7 @@
             <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_login_pass"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
@@ -58,7 +58,7 @@
             <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_new_login_pass"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
@@ -81,7 +81,7 @@
             <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_verify_login_pass"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
@@ -106,7 +106,7 @@
             <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_safe_pass"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
@@ -130,7 +130,7 @@
             <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_new_safe_pass"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
@@ -153,7 +153,7 @@
             <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_verify_safe_pass"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
