--- a/app/src/main/res/layout/activity_consumption_points_conversion.xml
+++ b/app/src/main/res/layout/activity_consumption_points_conversion.xml
@@ -102,10 +102,10 @@
                     android:text="兑换数量"
                     style="@style/text_0e1214_15"/>
 
-                <EditText
+                <cn.cnlinfo.ccf.view.CleanEditText
                     android:id="@+id/edit_exchange_number"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="32dp"
                     android:layout_weight="7"
                     android:gravity="center"
                     style="@style/text_0e1214_15"
@@ -119,7 +119,7 @@
                 <Button
                     android:id="@+id/but_confirm_conversion"
                     android:layout_width="69dp"
-                    android:layout_height="22dp"
+                    android:layout_height="32dp"
                     android:background="@drawable/selector_button_bg"
                     android:text="兑换"
                     android:layout_marginTop="18dp"
