--- a/app/src/main/res/layout/activity_set_encrypted.xml
+++ b/app/src/main/res/layout/activity_set_encrypted.xml
@@ -51,7 +51,7 @@
             <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/ct_answer_one"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
@@ -95,7 +95,7 @@
             <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/ct_answer_two"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
@@ -137,7 +137,7 @@
             <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/ct_answer_three"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
