--- a/app/src/main/res/layout/activity_foreign_transfer.xml
+++ b/app/src/main/res/layout/activity_foreign_transfer.xml
@@ -43,7 +43,8 @@
                 android:id="@+id/sp_transfer_type"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3" />
+                android:layout_weight="3"
+                android:entries="@array/spinner_foreign_transfer"/>
         </LinearLayout>
 
 
@@ -71,6 +72,7 @@
                 android:digits="@string/input_impose_num_lower_case"
                 android:maxLines="1"
                 android:maxLength="11"
+                android:hint="账号"
                 android:textColor="@drawable/selector_edit_text_color"
                 />
 
@@ -101,6 +103,7 @@
                 android:digits="@string/input_impose_num_lower_case"
                 android:maxLines="1"
                 android:maxLength="11"
+                android:hint="数量"
                 android:textColor="@drawable/selector_edit_text_color"
                 />
 
@@ -131,6 +134,7 @@
                 android:digits="@string/input_impose_num_lower_case"
                 android:maxLines="1"
                 android:maxLength="11"
+                android:hint="密码"
                 android:textColor="@drawable/selector_edit_text_color"
                 />
 
