--- a/app/src/main/res/layout/fragment_trading_center.xml
+++ b/app/src/main/res/layout/fragment_trading_center.xml
@@ -127,7 +127,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="9dp">
+                    android:layout_marginTop="9dp"
+                    android:gravity="center">
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -139,7 +140,9 @@
                         android:id="@+id/sp_hang_sell_type"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3" />
+                        android:layout_weight="3"
+                        android:entries="@array/spinner_trad_type"
+                        />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
