--- a/app/src/main/res/layout/activity_cc_service.xml
+++ b/app/src/main/res/layout/activity_cc_service.xml
@@ -15,7 +15,7 @@
         android:background="@drawable/icon_background"
         android:orientation="vertical">
         <TextView
-            android:id="@+id/tv_top_up"
+            android:id="@+id/tv_game_top_up"
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:text="游戏充值"
