--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="color_white_f3f3f3">#f3f3f3</color>
     <color name="color_white_ffffff">#FFFFFF</color>
     <color name="color_white_33000000">#33000000</color>
+    <color name="color_66000000">#66000000</color>
 
 
 
