--- a/app/src/main/res/layout/activity_recommend_net.xml
+++ b/app/src/main/res/layout/activity_recommend_net.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/icon_background">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <include layout="@layout/item_title_no_right"/>
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="cn.cnlinfo.ccf.activity.RecommendNetActivity">
-        <include layout="@layout/item_title_no_right"/>
-        <include layout="@layout/item_image" />
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <include layout="@layout/item_image" />
+            <TextView
+                style="@style/text_0e1214_20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="用户推荐人员层级信息" />
 
-        <TextView
-            style="@style/text_0e1214_20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="用户推荐人员层级信息" />
-
-        <cn.cnlinfo.ccf.view.ViewWithLine
-            android:id="@+id/vwl_self"
-            android:layout_width="720dp"
-            android:layout_height="1280dp" />
-    </LinearLayout>
-</ScrollView>
+            <cn.cnlinfo.ccf.view.ViewWithLine
+                android:id="@+id/vwl_self"
+                android:layout_width="720dp"
+                android:layout_height="1280dp" />
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
